# youtube-music-utils

./: .gitignore  GEMINI.md  LICENSE  README.md  pyproject.toml
.beads/: issues.jsonl
docs/: example-input-playlist.csv  example-output-playlist.csv
src/youtube_music_utils/: __init__.py  cli.py  client.py  models.py  playlist.py
tests/: test_cli.py  test_client.py  test_playlist.py
