[project]
name = "youtube-music-utils"
version = "0.1.0"
description = "A set of utilities to interface with YouTubeMusic."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ytmusicapi>=1.11.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_music_utils"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
