[project]
name = "youtube-music-utils"
version = "0.1.0"
description = "A set of utilities to interface with YouTubeMusic."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ytmusicapi>=1.11.3",
]

[project.scripts]
ym-utils = "youtube_music_utils.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_music_utils"]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
fix = true
line-length = 120

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = []

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "ytmusicapi.*"
ignore_missing_imports = true
